--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,8 @@ Authors@R: c(
            comment = c(ORCID = "0000-0002-8462-9775"))
            )
 Description: qraLm: A R package for quantitative risk assessment for Listeria monocytogenes in foods.
-URL: https://github.com/vcadavez/qraLm
-BugReports: https://github.com/vcadavez/qraLm/issues
+URL: https://github.com/WorldHealthOrganization/qraLm
+BugReports: https://github.com/WorldHealthOrganization/qraLm/issues
 Depends: R (>= 3.5.0)
 Imports: Rdpack, Hmisc, extraDistr, mc2d, matrixStats, DT, dplyr, shiny,
          ggplot2, plotly, Rcpp, doseresponsemodels
@@ -26,7 +26,7 @@ LazyLoad: yes
 LazyData: true
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 NeedsCompilation: no
 Suggests: knitr, rmarkdown, htmltools, mosaic, testthat (>= 3.0.0)
 VignetteBuilder: knitr
