--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ URL: https://github.com/WorldHealthOrganization/qraLm
 BugReports: https://github.com/WorldHealthOrganization/qraLm/issues
 Depends: R (>= 3.5.0)
 Imports: Rdpack, Hmisc, extraDistr, mc2d, matrixStats, DT, dplyr, shiny,
-         ggplot2, plotly, Rcpp, DRlm
+         ggplot2, plotly, Rcpp, DRLm
 LinkingTo: Rcpp, BH
 RdMacros: Rdpack
 License: MIT + file LICENSE
