--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(sfSmearingCC)
 export(sfSmoking)
 export(sfTesting)
 export(summaryLot.qraLm)
+export(summaryRiskLot.qraLm)
 export(summaryRiskServings.qraLm)
 export(summaryServings.qraLm)
 export(summaryUnits.qraLm)
