--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,8 +57,6 @@ export(summaryRiskLot.qraLm)
 export(summaryRiskServings.qraLm)
 export(summaryServings.qraLm)
 export(summaryUnits.qraLm)
-import(ggplot2)
-import(plotly)
 importFrom(DRLm,DR)
 importFrom(DRLm,DRLogNormPoisson)
 importFrom(DRLm,DRQuick)
@@ -71,6 +69,12 @@ importFrom(dplyr,"%>%")
 importFrom(extraDistr,dbbinom)
 importFrom(extraDistr,rtbinom)
 importFrom(extraDistr,rtnorm)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,stat_ecdf)
+importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(matrixStats,rowMeans2)
 importFrom(matrixStats,rowSums2)
 importFrom(matrixStats,rowWeightedMeans)
